// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bolt Shape Prop - border_radius items: full 1`] = `
<span class="e-bolt-shape e-bolt-shape--border_radius--full">
  <span class="e-bolt-shape__inner">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Prop - border_radius items: large 1`] = `
<span class="e-bolt-shape e-bolt-shape--border_radius--large">
  <span class="e-bolt-shape__inner">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Prop - border_radius items: none 1`] = `
<span class="e-bolt-shape">
  <span class="e-bolt-shape__inner">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Prop - border_radius items: small 1`] = `
<span class="e-bolt-shape e-bolt-shape--border_radius--small">
  <span class="e-bolt-shape__inner">
    This is a shape
  </span>
</span>
`;

exports[`Bolt Shape Prop - size: large 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - size: medium 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - size: small 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - spacing: medium 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - spacing: none 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - spacing: small 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape Prop - spacing: xsmall 1`] = `
<bolt-banner>
  <div class="c-bolt-banner c-bolt-banner--status-information c-bolt-banner--align-center">
    <ssr-keep for="bolt-banner">
      This is a shape
    </ssr-keep>
  </div>
</bolt-banner>
`;

exports[`Bolt Shape default 1`] = `
<span class="e-bolt-shape">
  <span class="e-bolt-shape__inner">
    This is a shape
  </span>
</span>
`;
